--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,7 @@
 
 <hr>
 
+<p><a href="{{ url_for('register') }}">注册</a></p>
 {#<form method="post">#}
 {#    {{ form.csrf_token() }}#}
 {#    {{ form.username.label }}{{ form.username }}<br>#}
