--- a/templates/index.html
+++ b/templates/index.html
@@ -4,189 +4,99 @@
     <body>
     <div class="banner">
         <div class="w">
-            <div class="subnav">
-                <ul>
-                    <!-- span放在a里面才会一起 -->
-                    <li class="firstline"><a href="#">奥斯卡 <span>&gt;</span> </a></li>
-                    <li><a href="#">奥斯卡 <span>&gt;</span> </a></li>
-                    <li><a href="#">奥斯卡 <span>&gt;</span> </a></li>
-                    <li><a href="#">奥斯卡 <span>&gt;</span> </a></li>
-                    <li><a href="#">奥斯卡 <span>&gt;</span> </a></li>
-                    <li><a href="#">奥斯卡 <span>&gt;</span> </a></li>
-                    <li><a href="#">奥斯卡 <span>&gt;</span> </a></li>
-                    <li><a href="#">奥斯卡 <span>&gt;</span> </a></li>
-                    <li><a href="#">奥斯卡 <span>&gt;</span> </a></li>
-                </ul>
-            </div>
-
-            <div class="course">
-                <h2>我的电影</h2>
-                <div class="body">
-                    <ul>
-                        <li>
-                            <h4>奥斯卡 奥斯卡</h4>
-                            <p>奥斯卡-奥斯卡</p>
-                        </li>
-                        <li>
-                            <h4>奥斯卡 奥斯卡</h4>
-                            <p>奥斯卡-奥斯卡</p>
-                        </li>
-                        <li>
-                            <h4>奥斯卡 奥斯卡</h4>
-                            <p>奥斯卡-奥斯卡</p>
-                        </li>
-                    </ul>
-
-                    <a href="#" class="more">奥斯卡</a>
-                </div>
-            </div>
         </div>
-    </div>
-
-    <div class="goods w">
-        <h3>精品推荐</h3>
-
-        <ul>
-            <li><a href="#">奥斯卡</a></li>
-            <li><a href="#">奥斯卡</a></li>
-            <li><a href="#">奥斯卡</a></li>
-            <li><a href="#">奥斯卡</a></li>
-            <li><a href="#">奥斯卡</a></li>
-            <li><a href="#">奥斯卡</a></li>
-        </ul>
-
-        <a href="#" class="mod">修改兴趣</a>
     </div>
 
     <div class="box w">
         <div class="box-hd">
-            <h3>精品推荐</h3>
-            <a href="#">查看全部</a>
+            <h1>Features</h1>
+            <a href="#">Get more...</a>
         </div>
 
-        <div class="box-bd">
+
+        <div class="box-bd w">
             <!-- 清除浮动，父盒子高度根据子盒子适时调整 -->
-            <ul class="clearfix">
+            <ul class="clearfix filmlist">
                 <li>
-                    <em>
-                        <img src="images/hot.png" alt="">
-                    </em>
-                    <img src="images/rec1.png" alt="">
-                    <h3>你说什么呢</h3>
-                    <div class="info">
-                        <span>高级</span> · 1125人在看
+                    <img src="../static/images/temp/IMG_1323.JPG" alt="">
+                    <div class="information">
+                        <a href="">Birdman</a>
                     </div>
                 </li>
                 <li>
-                    <img src="images/rec1.png" alt="">
-                    <h3>我才不知道</h3>
-                    <div class="info">
-                        <span>高级</span> · 1125人在看
+                    <img src="../static/images/temp/Her.JPG" alt="">
+                    <div class="information">
+                        <a href="">Her</a>
                     </div>
                 </li>
                 <li>
-                    <img src="images/rec2.png" alt="">
-                    <h3>沙丘</h3>
-                    <div class="info">
-                        <span>高级</span> · 1125人在看
+                    <img src="../static/images/temp/IMG_1324.JPG" alt="">
+                    <div class="information">
+                        <a href="">Fire On The Plain</a>
                     </div>
                 </li>
                 <li>
-                    <img src="images/rec2.png" alt="">
-                    <h3>沙丘</h3>
-                    <div class="info">
-                        <span>高级</span> · 1125人在看
+                    <img src="../static/images/temp/Stuar.JPG" alt="">
+                    <div class="information">
+                        <a href="">Stuart:<br>A Life Backwards</a>
                     </div>
                 </li>
                 <li>
-                    <img src="images/rec2.png" alt="">
-                    <h3>沙丘</h3>
-                    <div class="info">
-                        <span>高级</span> · 1125人在看
+                    <img src="../static/images/temp/Lost.JPG" alt="">
+                    <div class="information">
+                        <a href="">Lost in Translation</a>
                     </div>
                 </li>
                 <li>
-                    <img src="images/rec2.png" alt="">
-                    <h3>沙丘</h3>
-                    <div class="info">
-                        <span>高级</span> · 1125人在看
-                    </div>
-                </li>
-                <li>
-                    <img src="images/rec1.png" alt="">
-                    <h3>沙丘</h3>
-                    <div class="info">
-                        <span>高级</span> · 1125人在看
-                    </div>
-                </li>
-                <li>
-                    <img src="images/rec1.png" alt="">
-                    <h3>沙丘</h3>
-                    <div class="info">
-                        <span>高级</span> · 1125人在看看
-                    </div>
-                </li>
-                <li>
-                    <img src="images/rec1.png" alt="">
-                    <h3>沙丘</h3>
-                    <div class="info">
-                        <span>高级</span> · 1125人在看
-                    </div>
-                </li>
-                <li>
-                    <img src="images/rec1.png" alt="">
-                    <h3>沙丘</h3>
-                    <div class="info">
-                        <span>高级</span> · 1125人在看
+                    <img src="../static/images/3783958/La%20La%20Land.JPG" alt="">
+                    <div class="information">
+                        <a href="">La La Land</a>
                     </div>
                 </li>
             </ul>
-
-
-
         </div>
     </div>
 
     <!-- 通栏怎么制作(两个盒子) -->
     <!-- 上面的板块是浮动，父盒子高度为0，所以fooster直接跟上去了，因此上面的父盒子应该清除浮动 -->
-    <div class="fooster">
-        <div class="w">
-            <div class="copyright">
-                <img src="images/logo.png" alt="">
-                <p>致力于普及中国最好的电影它与中国一流机构合作提供在线课程。<br>
-                    © 2017年XTCG Inc.保留所有权利。-沪ICP备15025210号</p>
-                <a href="#">下载APP</a>
-            </div>
-
-            <div class="links">
-                <dl>
-                    <dt>关于学成</dt>
-                    <dd><a href="#">关于</a></dd>
-                    <dd><a href="#">管理团队</a></dd>
-                    <dd><a href="#">工作机会</a></dd>
-                    <dd><a href="#">客户服务</a></dd>
-                    <dd><a href="#">帮助</a></dd>
-                </dl>
-
-                <dl>
-                    <dt>关于学成</dt>
-                    <dd><a href="#">关于</a></dd>
-                    <dd><a href="#">管理团队</a></dd>
-                    <dd><a href="#">工作机会</a></dd>
-                    <dd><a href="#">客户服务</a></dd>
-                    <dd><a href="#">帮助</a></dd>
-                </dl>
-
-                <dl>
-                    <dt>关于学成</dt>
-                    <dd><a href="#">关于</a></dd>
-                    <dd><a href="#">管理团队</a></dd>
-                    <dd><a href="#">工作机会</a></dd>
-                    <dd><a href="#">客户服务</a></dd>
-                    <dd><a href="#">帮助</a></dd>
-                </dl>
-            </div>
-        </div>
-    </div>
+{#    <div class="fooster">#}
+{#        <div class="w">#}
+{#            <div class="copyright">#}
+{#                <img src="images/logo.png" alt="">#}
+{#                <p>致力于普及中国最好的电影它与中国一流机构合作提供在线课程。<br>#}
+{#                    © 2017年XTCG Inc.保留所有权利。-沪ICP备15025210号</p>#}
+{#                <a href="#">下载APP</a>#}
+{#            </div>#}
+{##}
+{#            <div class="links">#}
+{#                <dl>#}
+{#                    <dt>关于学成</dt>#}
+{#                    <dd><a href="#">关于</a></dd>#}
+{#                    <dd><a href="#">管理团队</a></dd>#}
+{#                    <dd><a href="#">工作机会</a></dd>#}
+{#                    <dd><a href="#">客户服务</a></dd>#}
+{#                    <dd><a href="#">帮助</a></dd>#}
+{#                </dl>#}
+{##}
+{#                <dl>#}
+{#                    <dt>关于学成</dt>#}
+{#                    <dd><a href="#">关于</a></dd>#}
+{#                    <dd><a href="#">管理团队</a></dd>#}
+{#                    <dd><a href="#">工作机会</a></dd>#}
+{#                    <dd><a href="#">客户服务</a></dd>#}
+{#                    <dd><a href="#">帮助</a></dd>#}
+{#                </dl>#}
+{##}
+{#                <dl>#}
+{#                    <dt>关于学成</dt>#}
+{#                    <dd><a href="#">关于</a></dd>#}
+{#                    <dd><a href="#">管理团队</a></dd>#}
+{#                    <dd><a href="#">工作机会</a></dd>#}
+{#                    <dd><a href="#">客户服务</a></dd>#}
+{#                    <dd><a href="#">帮助</a></dd>#}
+{#                </dl>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
     </body>
 {% endblock %}
