--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,20 +17,20 @@
 }
 /* 版心 */
 .w {
-    width: 1200px;
+    width: 1000px;
     margin: auto;
 }
 
-.clearfix:before,.clearfix:after {
-    content:"";
-    display:table;
-  }
-  .clearfix:after {
-    clear:both;
-  }
-  .clearfix {
-     *zoom:1;
-  }
+/*.clearfix:before,.clearfix:after {*/
+/*    content:"";*/
+/*    display:table;*/
+/*  }*/
+/*  .clearfix:after {*/
+/*    clear:both;*/
+/*  }*/
+/*  .clearfix {*/
+/*     *zoom:1;*/
+/*  }*/
 
 body {
     background-color: black;
@@ -45,14 +45,17 @@ a {
 }
 
 .header {
-    height: 20px;
-    margin: 15px auto;
-    margin-bottom: 20px;
+    /*margin: 0px auto;*/
+    padding: 10px 130px 40px 130px;
+    /*width: 1000px;*/
+    /*height: 48px;*/
+    /*padding: 0 12px;*/
+    background-color: #121212;
 }
 
 .logo {
     float: left;
-    padding-right: 70px;
+    padding-right: 50px;
 }
 
 .nav ul li a {
@@ -68,7 +71,7 @@ a {
 
 .nav ul li {
     float: left;
-    margin: 0 10px;
+    margin: 0 35px 0 0;
 }
 
 .nav ul li a:hover {
@@ -77,7 +80,7 @@ a {
 
 .header .search {
     float: left;
-    margin-left: 197px;
+    margin-left: 60px;
     height: 30px;
     width: 503px;
     background-color: white;
@@ -110,25 +113,29 @@ a {
     /*background: url(images/bgs.png);*/
 }
 
+.search .button:hover {
+    cursor: pointer;
+}
+
 .user {
     float: right;
     line-height: 30px;
     margin-right: 30px;
-    font-size: 14px;
+    font-size: 20px;
     color: #666;
 }
 
 .banner {
-    height: 421px;
-    background-color: #1c036c;
+    height: 600px;
+    background-color: black;
 }
 
 /* 浮动的盒子不会有外边距的合并问题 */
 
 .banner .w {
     /* 仍然要设置高度 */
-    height: 421px;
-    background: url(images/banner2.png) no-repeat top center;
+    height: 600px;
+    background: url(../images/bac.png) no-repeat top center;
 }
 
 .banner .w .subnav {
@@ -268,63 +275,76 @@ a {
 
 .box-hd {
     height: 20px;
-    margin-bottom: 22px;
+    margin-bottom: 28px;
 }
 
-.box-hd h3 {
+.box-hd h1 {
     float: left;
-    color: #494949;
-    font-size: 20px;
-    font-weight: 400;
+    color: #eec548;
+    font-family: Arial;
+    font-weight: 600;
+    font-size: 3rem;
+    /*font-size: 20px;*/
+    /*font-weight: 400;*/
 }
 
 .box-hd a {
     float: right;
-    padding: 8px 30px 0 0;
-    font-size: 12px;
-    color: #a5a5a5;
+    padding: 18px 30px 0 0;
+    font-family: Arial;
+    font-size: 14px;
+    color: #6599e8;
 }
+
 /* 小技巧 */
 /* 把li 的父亲ul 修改的足够宽一行能装开5个盒子就不会换行了 */
+.box-bd .filmlist {
+    float: left;
+    background-color: black;
+    width: 1000px;
+}
+
+/* 像素大小不匹配的时候的做法 */
+/* 亲儿子标签 */
+.box-bd .filmlist > img {
+    float: left;
+    padding-top: 30px;
+    height: 400px;
+}
+
+.box-bd .information a {
+    float: left;
+    padding: 15px 0 0 0;
+    font-size: 24px;
+    font-family: Arial;
+    color: white;
+}
+
+.box-bd .information a:hover {
+    color: #6599e8;
+}
+
 .box-bd ul {
-    width: 1225px;
+    width: 1000px;
 }
 
 .box-bd ul li {
     position: relative;
     float: left;
-    margin: 0 15px 15px 0;
-    height: 270px;
-    width: 230px;
-    background-color: #fff;
+    margin: 0 60px 68px 0;
+    /*height: 270px;*/
+    /*width: 230px;*/
+    height: 400px;
+    color: #fff;
 }
 /* 像素大小不匹配的时候的做法 */
 /* 亲儿子标签 */
 .box-bd ul li > img {
-    width: 100%;
-}
-
-.box-bd ul li em {
-    position: absolute;
-    top: 4px;
-    right: -4px;
-}
-
-.box-bd ul li h3 {
-    margin: 20px 20px 15px 25px;
-    font-size: 15px;
-    font-weight: 400;
-}
-
-.box-bd ul li .info {
-    margin: 0 20px 0 25px;
-    font-size: 12px;
-    color: #999;
-}
-
-.box-bd ul li span {
-    color: #ff7c2d;
-    padding-right: 5px;
+    display: block;
+    float: left;
+    padding-top: 30px;
+    height: 400px;
+    /*width: 100%;*/
 }
 
 .fooster {
