--- a/templates/login.html
+++ b/templates/login.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
+
 </head>
 <body>
+{% include 'base.html' %}
 <form method="post">
-    <label>用户名:</label><input type="text" name="username"><br>
+    <label>用户名:</label><input type="text" name="user_name"><br>
     <label>密码:</label><input type="password" name="password"><br>
     <input type="submit" value="提交"><br>
 {#    {% for message in get_flashed_messages() %}#}
