--- a/templates/film.html
+++ b/templates/film.html
@@ -20,10 +20,10 @@
                 <div class="description">
                     <h1>Filmfest</h1>
                     <ul>
-                        <li><a href="">84th Oscars <span>></span></a></li>
-                        <li><a href="">BAFTA Awards <span>></span></a></li>
-                        <li><a href="">Screen Actors Guild Awards <span>></span></a></li>
-                        <li><a href="">AACTA International Awards <span>></span></a></li>
+                        <li><a href="/filmfest">84th Oscars <span>></span></a></li>
+                        <li><a href="/filmfest">BAFTA Awards <span>></span></a></li>
+                        <li><a href="/filmfest">Screen Actors Guild Awards <span>></span></a></li>
+                        <li><a href="/filmfest">AACTA International Awards <span>></span></a></li>
                     </ul>
                 </div>
                 <div class="description">
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="hd">
-            <h1>Cast</h1>
+            <h1>Cast {{ username_me }}</h1>
             <a href="#">more ></a>
         </div>
         <div class="cast-bd">
@@ -55,15 +55,14 @@
         </div>
         <div class="comment-bd">
             <img class="f_w comment_pic" src="../static/images/3783958/lalaland_com.jpeg" alt="" >
-            <a href="/comment/asdakbdjaksssknd" class="time">Time:&nbsp;{{ comment_time }}</a>
+            <a href="/comment/asdakbdjaksssknd" class="time">Time:&nbsp;{{ film_time }}</a>
             <p>
                 <span>“</span>&nbsp;&nbsp;&nbsp;{{ comment_content }}
             </p>
             <p class="status">
-                <span class="author">From:&nbsp;<a href="">{{ user_id }}</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                <a href="/comment/asdakbdjaksssknd" class="icon agree" type="submit">&#xf087</a>&nbsp;<span class="separator">·</span>&nbsp;<span class="agree_number">1992</span>
+                <span class="author">From:&nbsp;<a href="">{{ author }}</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                <a href="/comment/asddesknd" class="icon agree" type="submit">&#xf087</a>&nbsp;<span class="separator">·</span>&nbsp;<span class="agree_number">{{ comment_like }}</span>
             </p>
-
         </div>
     </div>
 </body>
