--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,6 +78,8 @@ a {
     color: #eec548;
 }
 
+
+
 .header .search {
     float: left;
     margin-left: 60px;
@@ -117,12 +119,25 @@ a {
     cursor: pointer;
 }
 
-.user {
-    float: right;
-    line-height: 30px;
-    margin-right: 30px;
-    font-size: 20px;
+
+.user ul li a {
+    display: block;
     color: #666;
+    height: 30px;
+    padding: 0 10px;
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: 900;
+    text-decoration: none;
+}
+
+.user ul li {
+    float: right;
+    margin: 0 15px 0 0;
+}
+
+.user ul li a:hover {
+    color: #eec548;
 }
 
 .banner {
