--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,16 @@
         </div>
 
         <div class="user">
-            {{ user_name }}
+            <ul>
+                {% if user_name %}
+                    <li><a href="/logout" class="icon">&#xf112</a></li>
+                {% endif %}
+                {% if user_name %}
+                    <li><a href="/">{{ user_name }}</a></li>
+                {% else %}
+                {% endif %}
+
+            </ul>
         </div>
     </div>
     {% block base %}
