--- a/templates/comments.html
+++ b/templates/comments.html
@@ -48,14 +48,13 @@
                         From:&nbsp;<a href="/user" methods="post">{{ film_comment[2] }}</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 </span>
 
-                <a href="/comment/asddesknd" class="icon agree" type="submit">&#xf087</a>&nbsp;
+                <a href="/comment/asddeskn" class="icon agree" type="submit">&#xf087</a>&nbsp;
                 <span class="separator">·</span>&nbsp;
                 <span class="agree_number">
                     {{ film_comment[5] }}
                 </span>
             </div>
         {% endfor %}
-
     </div>
 
 
