--- a/static/css/film.css
+++ b/static/css/film.css
@@ -67,7 +67,7 @@ a {
 }
 
 .title {
-    padding: 30px 0 15px 0px;
+    padding: 30px 0 5px 0px;
     font-size: 50px;
     font-weight: 500;
     color: white;
@@ -192,7 +192,7 @@ a {
 
 .mainbody .cast-bd p{
     padding-top: 7px;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
     font-size: 18px;
     font-family: Arial;
     color: #4e4e4e;
@@ -200,7 +200,7 @@ a {
 
 .mainbody .cast-bd a{
     display: block;
-    padding-bottom: 8px;
+    padding-bottom: 12px;
     font-size: 25px;
     font-family: Arial;
     color: white;
@@ -215,7 +215,7 @@ a {
 }
 
 .comment-bd p{
-    margin-top: 30px;
+    margin-top: 40px;
     font-size: 24px;
     font-family: Arial;
     color: white;
@@ -258,7 +258,6 @@ a {
 }
 
 .comment-bd .author a{
-
     color: #6599e8;
 }
 
@@ -288,4 +287,35 @@ a {
 
 .comment-bd .status .agree_number{
     font-size: 16px;
+}
+
+.comment-bd .singer{
+    font-size: 20px;
+}
+
+.comment-bd .singer a{
+    color: #797878;
+}
+
+.music_name {
+    font-style: italic
+}
+
+.taglines {
+    padding-bottom: 25px;
+    color: #4e4e4e;
+    font-style: italic;
+    font-family: Arial;
+}
+
+.hd .music_title {
+    padding-bottom: 0;
+}
+
+.comment-bd .music_singer{
+    padding-top: 0;
+}
+
+.comment-bd .music_name p{
+    margin-top: 30px;
 }
