--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IMDB都不理</title>
+    <title>我想睡觉啊啊啊啊啊</title>
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
 
