--- a/templates/film.html
+++ b/templates/film.html
@@ -14,6 +14,7 @@
         <h1 class="title f_w">
         {{ film_name_en }}
         </h1>
+        <p class="taglines">"Here's to the fools who dream."</p>
         <div class="f_w maininfo">
             <img src="../static/images/3783958/La%20La%20Land.JPG" alt="" class="poster">
             <div class="sidebar">
@@ -49,19 +50,36 @@
                 </div>
             </div>
 
+        <div class="hd">
+            <h1 class="music_title">Soundtrack</h1>
+            <a href="#">more ></a>
+        </div>
+        <div class="comment-bd c_w">
+            {% for music in music_all %}
+                <div class="content music_name">
+                        <p>{{ music[2] }}</p>
+                </div>
+                <div class="status music_singer">
+                    <span class="singer">
+                        <a href="#" methods="post">{{ music[3] }}</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    </span>
+                </div>
+            {% endfor %}
+        </div>
+
         <div class="comment hd">
             <h1>Comment</h1>
             <a href="/comment/new" class="add">+</a>
         </div>
         <div class="comment-bd">
             <img class="f_w comment_pic" src="../static/images/3783958/lalaland_com.jpeg" alt="" >
-            <a href="/comment/asdakbdjaksssknd" class="time">Time:&nbsp;{{ film_time }}</a>
+            <a href="/comment/asdakbdjakssskn" class="time">Time:&nbsp;{{ film_time }}</a>
             <p>
                 <span>“</span>&nbsp;&nbsp;&nbsp;{{ comment_content }}
             </p>
             <p class="status">
                 <span class="author">From:&nbsp;<a href="">{{ author }}</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                <a href="/comment/asddesknd" class="icon agree" type="submit">&#xf087</a>&nbsp;<span class="separator">·</span>&nbsp;<span class="agree_number">{{ comment_like }}</span>
+                <a href="/comment/asddeskn" class="icon agree" type="submit">&#xf087</a>&nbsp;<span class="separator">·</span>&nbsp;<span class="agree_number">{{ comment_like }}</span>
             </p>
         </div>
     </div>
